@@ -1,3 +1,11 @@
+1998-05-09  Reginald Stadlbauer  <reggie@kde.org>
+
+	* backdia.cc (BackDia): added possibility to choose a gradient
+	colored background
+
+	* page.cc (drawBackColor): added function to draw background with
+	gradeint colors
+
 Thu Apr 30 02:08:41 1998  Torben Weis  <weis@localhost>
 
 	* Makefile (CXXFLAGS): Addes libkofficecore
